# bookmark

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  generate-icons.sh  icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/quick-capture/: page.tsx
src/components/: BreadcrumbNav.tsx  DetailView.tsx  MemoryCard.tsx  MemoryList.tsx  NotesView.tsx  Priorities.tsx  PriorityCard.tsx  PromptBox.tsx  SearchPill.tsx  ThemeProvider.tsx  Timeline.tsx  ViewToggle.tsx
src/components/notes/: DropdownMenu.tsx  EditorToolbar.tsx  ImageUploadNode.tsx  ToolbarButton.tsx  ToolbarDivider.tsx  constants.ts  extensions.ts  index.ts  types.ts  utils.ts
src/config/: api.config.ts
src/services/: memoryService.ts
src/types/: memoir-api.types.ts  priority.types.ts
