[package]
name = "memoir"
version = "0.1.0"
description = "Your personal timeline and memory assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "memoir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mouse_position = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
